--- a/call.html
+++ b/call.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="The program committee is delighted to invite you to the 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems 
 		(ImmerCom) 2024. The workshop will be held on November 18, 2024. Immercom is in conjunction with MobiCom 2024">
-    <title>ImmerCom 2023</title>
+    <title>ImmerCom 2024</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="jumbotron.css" rel="stylesheet">
 	
@@ -48,7 +48,7 @@
                         Past Workshops
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="https://immercom.github.io/program.html">ImmerCom 2023</a>
+                        <a class="dropdown-item" href="2023/">ImmerCom 2023</a>
                     </div>
                 </li>
             </ul>
