--- a/submission.html
+++ b/submission.html
@@ -48,7 +48,7 @@
                         Past Workshops
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="https://immercom.github.io/program.html">ImmerCom 2023</a>
+                        <a class="dropdown-item" href="2023/">ImmerCom 2023</a>
                     </div>
                 </li>
             </ul>
