--- a/committees.html
+++ b/committees.html
@@ -96,18 +96,22 @@
                     </ul>-->
             <h2>Technical Program Committee</h2>
                 <ul>
-                    <li>Jiayi Meng, The University of Texas at Arlington, USA</li>
-                    <li>Zili Meng, The Hong Kong University of Science and Technology, Hong Kong</li>
-                    <li>Christian Timmerer, Alpen-Adria-Universität Klagenfurt, Austria</li>
-                    <li>Federica Battisti, University of Padova, Italy</li>
-                    <li>Klara Nahrstedt, University of Illinois Urbana-Champaign, USA</li>
-                    <li>Kittipat Apicharttrisorn, Nokia Bell Labs, USA</li>
-                    <li>Maria Gorlatova, Duke University, USA</li>
-                    <li>Ruizhi Cheng, George Mason University, USA</li>
-                    <li>Tao Jin, Carnegie Mellon University, USA</li>
-                    <li>Bo Chen, University of Illinois at Urbana-Champaign, USA</li>
-                    <li>Fangxin Wang, The Chinese University of Hong Kong, Hong Kong</li>
                     <li>Abdelhak Bentaleb, Concordia University, USA</li>
+                    <li>Ahmad Hassan, University of Southern California, USA</li>
+                    <li>Anlan Zhang, University of Southern California, USA</li>
+                    <li>Bo Chen, University of Illinois at Urbana-Champaign, USA</li>
+                    <li>Christian Timmerer, Alpen-Adria-Universität Klagenfurt, Austria</li>
+                    <li>Fangxin Wang, The Chinese University of Hong Kong, Hong Kong</li>
+                    <li>Federica Battisti, University of Padova, Italy</li>
+                    <li>Jiayi Meng, The University of Texas at Arlington, USA</li>
+                    <li>Kittipat Apicharttrisorn, Nokia Bell Labs, USA</li>
+                    <li>Klara Nahrstedt, University of Illinois Urbana-Champaign, USA</li>
+                    <li>Maria Gorlatova, Duke University, USA</li>
+                    <li>Mohamed Hefeda, Simon Fraser University, Canada</li>
+                    <li>Ruizhi Cheng, George Mason University, USA</li>
+                    <li>Zili Meng, The Hong Kong University of Science and Technology, Hong Kong</li>
+                    
+                   
                 </ul>
 
                     <!--
