CSS animations are added.

--- a/nsf/index.html
+++ b/nsf/index.html
@@ -10,6 +10,7 @@
     <title>NSF Workshop 2024</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/jumbotron.css" rel="stylesheet"> 
+    <link href="./css/navbar.css" rel="stylesheet"> 
    
 
     <style>
