The site is restructured

--- a/nsf/index.html
+++ b/nsf/index.html
@@ -45,15 +45,11 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/committees.html">Committees</a>
+                    <a class="nav-link" href="./pages/committees.html">Organizers</a>
                 </li>
 
                 <li class="nav-item">
                     <a class="nav-link" href="./pages/program.html">Technical Program</a>
-                </li>
-
-		        <li class="nav-item">
-                    <a class="nav-link" href="./pages/keynote.html">Keynote</a>
                 </li>
 
             </ul>
