--- a/nsf/index.html
+++ b/nsf/index.html
@@ -50,7 +50,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="./pages/committees.html">Organizers</a>
+                <a class="nav-link" href="./pages/organizers.html">Organizers</a>
             </li>
 
             <li class="nav-item">
