--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -51,7 +51,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="committees.html">Organizers</a>
+                    <a class="nav-link" href="organizers.html">Organizers</a>
                 </li>
 
                 <li class="nav-item">
