Page formattings are added. Program schedule is added.

--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -10,7 +10,7 @@
     <title>NSF-WNSCIC 2024</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/jumbotron.css" rel="stylesheet"> 
-    <link href="../css/navbar.css" rel="stylesheet"> 
+    <link href="../css/navbar.css" rel="stylesheet">
    
 
     <style>
@@ -47,7 +47,7 @@
                 </li>
 
 		        <li class="nav-item">
-                    <a class="nav-link" href="submission.html">Paper Submission</a>
+                    <a class="nav-link" href="https://edas.info/login.php" target="_blank">Paper Submission</a>
                 </li>
 
                 <li class="nav-item">
@@ -59,7 +59,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="https://masonsquare.gmu.edu/about-mason-square">Getting to Venue</a>
+                    <a class="nav-link" href="https://masonsquare.gmu.edu/about-mason-square" target="_blank">Getting to Venue</a>
                 </li>
 
             </ul>
