--- a/nsf/pages/theme.html
+++ b/nsf/pages/theme.html
@@ -11,7 +11,6 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/jumbotron.css" rel="stylesheet"> 
     <link href="../css/navbar.css" rel="stylesheet"> 
-   
 
     <style>
     .text-background {
@@ -47,7 +46,7 @@
                 </li>
 
 		        <li class="nav-item">
-                    <a class="nav-link" href="submission.html">Paper Submission</a>
+                    <a class="nav-link" href="https://edas.info/login.php" target="_blank">Paper Submission</a>
                 </li>
 
                 <li class="nav-item">
@@ -59,7 +58,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="https://masonsquare.gmu.edu/about-mason-square">Getting to Venue</a>
+                    <a class="nav-link" href="https://masonsquare.gmu.edu/about-mason-square" target="_blank">Getting to Venue</a>
                 </li>
 
             </ul>
