navbar dropdowns are added.

--- a/nsf/index.html
+++ b/nsf/index.html
@@ -51,8 +51,27 @@
                     <a class="nav-link" href="./pages/organizers.html">Organizers</a>
                 </li>
     
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/program.html">Technical Program</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href=".." id="navbarDropdownMenuLink" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Technical Program
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="./pages/schedule.html">Program Schedule</a>
+                        <a class="dropdown-item" href="./pages/breakout.html">Break-Out Assignments</a>
+                        <a class="dropdown-item" href="./pages/contributions.html">Accepted Contributions</a>
+                    </div>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href=".." id="navbarDropdownMenuLink" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Registration
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="./pages/in-person.html">In-person Presentation</a>
+                        <a class="dropdown-item" href="./pages/remote.html">Remote Presentation</a>
+                    </div>
                 </li>
     
                 <li class="nav-item">
