--- a/submission.html
+++ b/submission.html
@@ -84,10 +84,10 @@
 		    
 		    <h2>Important Dates</h2>
                     <ul>
-                        <li>Paper submission deadline:  July 19th, 2024, AoE </li>
-                        <li>Paper acceptance notification: August 12, 2024, AoE</li>
-                        <li>Camera-ready due: September 13, 2024, AoE</li>
-                        <li>Workshop Date: November 18, 2024</li>
+                        <li>Paper submission deadline: <del>July 19th, 2024, AoE</del> July 26th, 2024, AoE </li>
+                        <li>Paper acceptance notification: <del>August 12th, 2024, AoE</del> August 19th, 2024, AoE </li>
+                        <li>Camera-ready due: September 13th, 2024, AoE</li>
+                        <li>Workshop Date: November 18th, 2024</li>
                     </ul>
 		    
 
