--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h1 class="display-3"> ImmerCom 2024</h1>
                 <p> <h5>The 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
 		<p> <h5>To be held in conjunction with ACM MobiCom 2024 </h5></p>
-                <p><h5>November 18, 2024, <b>  </b>Washington, D.C., USA </h5></p>
+                <p><h5>November 18th, 2024, <b>  </b>Washington, D.C., USA </h5></p>
                </div>
 	    </div>
         </div>
@@ -81,10 +81,10 @@
                     <h3>Important Dates</h3>
                        <ul>
                         <!--<li>Abstract registration deadline: June 23rd, 2023, AoE </li>-->
-                        <li>Paper submission deadline:  July 19th, 2024, AoE </li>
-                        <li>Paper acceptance notification: August 12, 2024, AoE</li>
-                        <li>Camera-ready due: September 13, 2024, AoE</li>
-                        <li>Workshop Date: November 18, 2024</li>
+                        <li>Paper submission deadline: <del>July 19th, 2024, AoE</del> July 26th, 2024, AoE</li>
+                        <li>Paper acceptance notification: <del>August 12th, 2024, AoE</del> August 19th, 2024, AoE </li>
+                        <li>Camera-ready due: September 13th, 2024, AoE</li>
+                        <li>Workshop Date: November 18th, 2024</li>
                        </ul>
 		   <h3>Announcements</h3>
                        <ul>
