--- a/committees.html
+++ b/committees.html
@@ -64,7 +64,7 @@
                 <h1 class="display-3"> ImmerCom 2024</h1>
                 <p> <h5>The 2nd ACM Workshop on Mobile Immersive Computing, Networking, and Systems</h5></p> 
         <p> <h5>To be held in conjunction with ACM MobiCom 2024 </h5></p>
-                <p><h5>November 18, 2024, <b>  </b>Washington, D.C., USA </h5></p>
+                <p><h5>November 18th, 2024, <b>  </b>Washington, D.C., USA </h5></p>
             </div>
         </div>
         </div>
