--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                     <h3>Important Dates</h3>
                        <ul>
                         <!--<li>Abstract registration deadline: June 23rd, 2023, AoE </li>-->
-                        <li>Paper submission deadline: <del>July 19th, 2024, AoE</del> July 26th, 2024, AoE</li>
-                        <li>Paper acceptance notification: <del>August 12th, 2024, AoE</del> August 19th, 2024, AoE </li>
-                        <li>Camera-ready due: September 13th, 2024, AoE</li>
-                        <li>Workshop Date: November 18th, 2024</li>
+                        <li>Paper submission deadline:  July 19th, 2024, AoE </li>
+                        <li>Paper acceptance notification: August 12, 2024, AoE</li>
+                        <li>Camera-ready due: September 13, 2024, AoE</li>
+                        <li>Workshop Date: November 18, 2024</li>
                        </ul>
 		   <h3>Announcements</h3>
                        <ul>
