--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="committees.html">Committees</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="program.html">Technical Program</a>
+                    <a class="nav-link" href="program.html">Tentative Program</a>
                 </li>  
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
