update tentative program

--- a/program.html
+++ b/program.html
@@ -204,7 +204,7 @@ The workshop will take place on Monday, November 18th.</td>
             <td style="vertical-align: top; min-width: 100px;">11:30-12:30</td>
             <td>
             <ulx>
-                    <h4>Panel: Open problems in mobile immersive computing</h4>
+                    <h4>Panel: Open Problems in Mobile Immersive Computing</h4>
                     <font size="3" style="font-weight:normal">TBD</font><br>
                     <!--
                     <font size="3" style="font-weight:normal">Moderator: one of us</font><br>
