--- a/committees.html
+++ b/committees.html
@@ -78,6 +78,7 @@
                     <h2>Steering Committee</h2>
                     <ul>
 			<li>Songqing Chen, George Mason University, USA</li>
+			<li>Bo Han, George Mason University, USA (Chair)</li>
                         <li>Charlie Hu, Purdue University, USA</li>
                         <li>Klara Nahrstedt, University of Illinois at Urbana-Champaign, USA</li>
                         <li>Lili Qiu, University of Texas at Austin, USA</li>
