--- a/committees.html
+++ b/committees.html
@@ -46,6 +46,9 @@
                     <a class="nav-link" href="committees.html">Committees</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="travel.html">Travel Grant</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="program.html">Tentative Program</a>
                 </li> 
                 <li class="nav-item dropdown">
