--- a/program.html
+++ b/program.html
@@ -57,6 +57,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="committees.html">Committees</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="travel.html">Travel Grant</a>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="program.html">Tentative Program</a>
                 </li>  
