--- a/travel.html
+++ b/travel.html
@@ -79,10 +79,10 @@
             <div class="row">
                 <div class="col-md-12">
                     <p class="mt-3">
-                        The goal of ImmerCom is to build a collaborative community that advances research and development in immersive computing, networking, and systems. The travel grant is supported by the CoMIC project (<a href="https://comic-xr.github.io/" target="_blank">https://comic-xr.github.io/</a>) through the National Science Foundation (NSF) to sponsor participation in ImmerCom 2024.
+                        The goal of ImmerCom is to build a collaborative community that advances research and development in immersive computing, networking, and systems. The student travel grant is supported by the CoMIC project (<a href="https://comic-xr.github.io/" target="_blank">https://comic-xr.github.io/</a>) through the National Science Foundation (NSF) to sponsor participation in ImmerCom 2024. Thus, the travel grant is limited to students at U.S. institutions.
                     </p>
                     <p class="mt-3">
-                        To apply for a travel grant, please submit the following information in PDF files before October 31th, 2024 (AoE), via this 
+                        To apply for a student travel grant, please submit the following information in PDF files before October 31th, 2024 (AoE), via this 
                         <a href="https://forms.gle/mCnwVavwwQucHep97">application form</a>:
                     </p>
         
@@ -97,7 +97,7 @@
                             <li>Discribe your insights on the grand challenges of immersive computing, networking, and systems.</li>
                         </ul>
         
-                        <li class="mt-3"><strong>3. Nomination Letter (maximum 1 page) from the advisor/supervisor (if you are a student):</strong></li>
+                        <li class="mt-3"><strong>3. Nomination Letter (maximum 1 page) from the advisor/supervisor:</strong></li>
                         <ul>
                             <li>Confirmation that the student is in good academic standing.</li>
                             <li>The suitability of the ImmerCom program to the student's research areas.</li>
