--- a/travel.html
+++ b/travel.html
@@ -82,7 +82,7 @@
                         The goal of ImmerCom is to build a collaborative community that advances research and development in immersive computing, networking, and systems. The student travel grant is supported by the CoMIC project (<a href="https://comic-xr.github.io/" target="_blank">https://comic-xr.github.io/</a>) through the National Science Foundation (NSF) to sponsor participation in ImmerCom 2024. Thus, the travel grant is limited to students at U.S. institutions.
                     </p>
                     <p class="mt-3">
-                        To apply for a student travel grant, please submit the following information in PDF files before October 31th, 2024 (AoE), via this 
+                        To apply for a student travel grant, please submit the following information in PDF files before October 31st, 2024 (AoE), via this 
                         <a href="https://forms.gle/mCnwVavwwQucHep97">application form</a>:
                     </p>
         
