--- a/nsf/pages/committees.html
+++ b/nsf/pages/committees.html
@@ -86,11 +86,14 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2> General Co-chairs </h2>
-                    <p>Bo Han, George Mason University, USA</p>
-                    <p>Songqing Chen, George Mason University, USA</p>
-
+                    <p>Songqing Chen, George Mason University</p>
+			<p>Mallesham Dasari, Northeastern University</p>
+			<p>Bo Han, George Mason University</p>
+			<p>Robert LiKamWa, Arizona State University</p>
+	
                     <h2> Steering Committee </h2>
-                    <p>Klara Nahrstedt, University of Illinois Urbana-Champaign, USA</p>
+                    <p>Yingying (Jennifer) Chen, Rutgers Universit</p>
+			<p>Klara Nahrstedt, University of Illinois Urbana-Champaign</p>
 
                     <h2> Publicity Chair </h2>
                     <p>Bo Chen, University of Illinois Urbana-Champaign, USA</p>
