--- a/nsf/pages/committees.html
+++ b/nsf/pages/committees.html
@@ -86,14 +86,14 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2> General Co-chairs </h2>
-                    <p>Songqing Chen, George Mason University</p>
-			<p>Mallesham Dasari, Northeastern University</p>
-			<p>Bo Han, George Mason University</p>
-			<p>Robert LiKamWa, Arizona State University</p>
+                    <li>Songqing Chen, George Mason University</li>
+			<li>Mallesham Dasari, Northeastern University</li>
+			<li>Bo Han, George Mason University</li>
+			<li>Robert LiKamWa, Arizona State University</li>
 	
                     <h2> Steering Committee </h2>
-                    <p>Yingying (Jennifer) Chen, Rutgers Universit</p>
-			<p>Klara Nahrstedt, University of Illinois Urbana-Champaign</p>
+                    <li>Yingying (Jennifer) Chen, Rutgers Universit</li>
+			<li>Klara Nahrstedt, University of Illinois Urbana-Champaign</li>
 
                     <h2> Publicity Chair </h2>
                     <p>Bo Chen, University of Illinois Urbana-Champaign, USA</p>
