--- a/nsf/pages/committees.html
+++ b/nsf/pages/committees.html
@@ -96,10 +96,10 @@
 			<li>Klara Nahrstedt, University of Illinois Urbana-Champaign</li>
 
                     <h2> Publicity Chair </h2>
-                    <p>Bo Chen, University of Illinois Urbana-Champaign, USA</p>
+                    <li>Bo Chen, University of Illinois Urbana-Champaign, USA</li>
 
                     <h2> Web Chair </h2>
-                    <p>Nan Wu, George Mason University, USA</p>
+                    <li>Nan Wu, George Mason University, USA</li>
                 </div>
             </div>
             <hr>
