--- a/nsf/pages/committees.html
+++ b/nsf/pages/committees.html
@@ -95,6 +95,9 @@
                     <li>Yingying (Jennifer) Chen, Rutgers Universit</li>
 			<li>Klara Nahrstedt, University of Illinois Urbana-Champaign</li>
 
+			<h2> Local Arrangement Chair </h2>
+                    <li>Xiaonan Guo, George Mason University, USA</li>
+
                     <h2> Publicity Chair </h2>
                     <li>Bo Chen, University of Illinois Urbana-Champaign, USA</li>
 
