--- a/nsf/pages/committees.html
+++ b/nsf/pages/committees.html
@@ -86,23 +86,33 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2> General Co-chairs </h2>
-                    <li>Songqing Chen, George Mason University</li>
+			<ul>
+                    	<li>Songqing Chen, George Mason University</li>
 			<li>Mallesham Dasari, Northeastern University</li>
 			<li>Bo Han, George Mason University</li>
 			<li>Robert LiKamWa, Arizona State University</li>
+			</ul>
 	
                     <h2> Steering Committee </h2>
-                    <li>Yingying (Jennifer) Chen, Rutgers Universit</li>
+			<ul>
+                    	<li>Yingying (Jennifer) Chen, Rutgers Universit</li>
 			<li>Klara Nahrstedt, University of Illinois Urbana-Champaign</li>
+			<\ul>
 
 			<h2> Local Arrangement Chair </h2>
-                    <li>Xiaonan Guo, George Mason University, USA</li>
+			<ul>
+                    	<li>Xiaonan Guo, George Mason University</li>
+			<\ul>
 
                     <h2> Publicity Chair </h2>
-                    <li>Bo Chen, University of Illinois Urbana-Champaign, USA</li>
+			<ul>
+                    	<li>Bo Chen, University of Illinois Urbana-Champaign</li>
+			<\ul>
 
                     <h2> Web Chair </h2>
-                    <li>Nan Wu, George Mason University, USA</li>
+			<ul>
+  	                <li>Nan Wu, George Mason University</li>
+			<\ul>
                 </div>
             </div>
             <hr>
