--- a/nsf/index.html
+++ b/nsf/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-       content="The program committee is delighted to invite you to the NSF Workshop on Networking and Systems Challenges in Immersive Computing 2025. The workshop will be held on {Date}.">
-    <title>NSF-WNSCIC 2025</title>
+       content="The organizing committee is delighted to invite you to the NSF Workshop on Networking and Systems Challenges in Immersive Computing 2025.">
+    <title>NSF Workshop on Networking and Systems Challenges in Immersive Computing</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/jumbotron.css" rel="stylesheet"> 
     <link href="./css/navbar.css" rel="stylesheet"> 
@@ -93,12 +93,12 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2>Welcome</h2>
-                    <p>The program committee is delighted to invite you to the  NSF Workshop on Networking and Systems Challenges in Immersive Computing. The workshop will be held on March 31st and April 1st at George Mason University's Van Metre Hall located at 3351 Fairfax Dr, Arlington, VA. </p> 
+                    <p>The organizing committee is delighted to invite you to the  NSF Workshop on Networking and Systems Challenges in Immersive Computing. The workshop will be held on March 31st and April 1st at George Mason University's Van Metre Hall located at 3351 Fairfax Dr, Arlington, VA. </p> 
                     
                     <h2>Important Dates</h2>
                     <ul>
-                        <li><strong>Position paper submission deadline:</strong> December 1st, 2025, AoE</li>
-                        <li><strong>Position paper notification:</strong> December 10th, 2025, AoE</li>
+                        <li><strong>Position Paper Submission Deadline:</strong> December 1st, 2024, AoE</li>
+                        <li><strong>Position Paper Notification:</strong> December 10th, 2024, AoE</li>
                         <li><strong>Workshop:</strong> March 31st - April 1st, 2025</li>
                     </ul>
 
