--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-       content="The program committee is delighted to invite you to the NSF Workshop on Networking and Systems Challenges in Immersive Computing 2025. The workshop will be held on {Date}.">
-    <title>NSF-WNSCIC 2025</title>
+       content="The organizing committee is delighted to invite you to the NSF Workshop on Networking and Systems Challenges in Immersive Computing 2025.">
+    <title>NSF Workshop on Networking and Systems Challenges in Immersive Computing</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/jumbotron.css" rel="stylesheet"> 
     <link href="../css/navbar.css" rel="stylesheet">
