--- a/nsf/index.html
+++ b/nsf/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-       content="The organizing committee is delighted to invite you to the NSF Workshop on Networking and Systems Challenges in Immersive Computing 2025.">
+       content="The organizing committee is delighted to invite you to the NSF Workshop on Networking and Systems Challenges in Immersive Computing.">
     <title>NSF Workshop on Networking and Systems Challenges in Immersive Computing</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/jumbotron.css" rel="stylesheet"> 
