--- a/nsf/index.html
+++ b/nsf/index.html
@@ -94,7 +94,33 @@
                 <div class="col-md-12">
                     <h2>Welcome</h2>
                     <p>The organizing committee is delighted to invite you to the  NSF Workshop on Networking and Systems Challenges in Immersive Computing. The workshop will be held on March 31st and April 1st at George Mason University's Van Metre Hall located at 3351 Fairfax Dr, Arlington, VA. </p> 
-                    
+                    <p>In the ever-evolving landscape of technology, immersive computing stands as a transformative force,
+reshaping human experiences, communication, and innovation. By creating highly interactive
+and engaging experiences for users, immersive computing integrates digital information and content
+into their physical environment with technologies such as virtual, augmented, and mixed reality
+(VR/AR/MR), which are typically referred to as extended reality (XR). To harness the full potential
+of this frontier, it is imperative to establish a thriving and interconnected community of researchers,
+dedicated to addressing the networking and systems challenges in immersive computing. Our visioning workshop aims at
+building this community and fostering interdisciplinary collaborations to identify and explore the
+most promising horizons in addressing these challenges. 
+
+			<p> This workshop will be designed to achieve the following key objectives:
+<ul>				
+<li> <b>Strategic Research Initiatives</b>: We intend to pinpoint possible solutions addressing challenges in
+networking, systems, and associated technologies of immersive computing. This initiative is geared
+towards maintaining the United States’ leadership in innovation. We plan to develop a scientific
+agenda that identifies new or under-served problem areas, offering valuable insights to NSF.</li>
+<li> <b>Education and Outreach</b>: Nurturing the next generation of researchers is paramount. The workshop
+includes educational and outreach initiatives aimed at disseminating knowledge about the importance
+of immersive computing and generating interest, engagement, and awareness among researchers,
+students, and industry professionals.</li>
+<li> <b>Community Building</b>: Building interdisciplinary teams and, crucially, maintaining their longevity
+over extended durations present significant challenges. Our goal is to establish a collaborative ecosystem
+that fosters a well-connected community of researchers across academia, industry, and government.
+This interconnected network will catalyze interdisciplinary research, innovation, and the exchange
+of knowledge.</li>
+</ul>
+			    
                     <h2>Important Dates</h2>
                     <ul>
                         <li><strong>Position Paper Submission Deadline:</strong> December 1st, 2024, AoE</li>
