--- a/nsf/index.html
+++ b/nsf/index.html
@@ -128,9 +128,12 @@ of knowledge.</li>
                         <li><strong>Workshop:</strong> March 31st - April 1st, 2025</li>
                     </ul>
 
-
-
-
+			<h2>Sponsor</h2>
+			<ul>
+			This workshop will be sponsored by the National Science Foundation (NSF). 
+			The cognizant NSF Program Directors are Jason Hallstrom, Deepankar Medhi, and Mimi McClure. 
+			Bo Han (George Mason University) is the principal investigator (PI) of this project. Please send all your inquiries to <a href="mailto:bohan@gmu.edu" style="color: #007bff; text-decoration: none;">bohan@gmu.edu</a>.
+			</ul>
 
                 </div>
             </div>
