--- a/nsf/index.html
+++ b/nsf/index.html
@@ -131,8 +131,8 @@ of knowledge.</li>
 			<h2>Sponsor</h2>
 			<ul>
 			This workshop will be sponsored by the National Science Foundation (NSF). 
-			The cognizant NSF Program Directors are Jason Hallstrom, Deepankar Medhi, and Mimi McClure. 
-			Bo Han (George Mason University) is the principal investigator (PI) of this project. Please send all your inquiries to <a href="mailto:bohan@gmu.edu" style="color: #007bff; text-decoration: none;">bohan@gmu.edu</a>.
+			The cognizant NSF Program Directors are Jason O. Hallstrom, Deepankar (Deep) Medhi, and Mimi McClure. 
+			Bo Han from George Mason University is the principal investigator (PI) of <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2416781&HistoricalAwards=false">this project</a>. Please send all your inquiries to <a href="mailto:bohan@gmu.edu" style="color: #007bff; text-decoration: none;">bohan@gmu.edu</a>.
 			</ul>
 
                 </div>
