--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -87,9 +87,64 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2> TBD </h2>
+                    <h2> Call for Position Papers </h2>
                     
-                    
+                    <p>We seek to foster cross-disciplinary dialogue and drive innovation in building the next generation of 
+			network infrastructures and systems that can meet the demands of immersive applications.
+			</p>
+
+
+			<p>Position papers should address one or more of the following focus topics:</p>
+			<ul>
+			<li>Network Protocols: Immersive computing places unique demands on network protocols, requiring ultra-low latency, 
+				high bandwidth, and efficient data handling. We seek contributions on novel communication protocols, data 
+				compression techniques, and enhancements to transport layer protocols optimized for immersive environments.</li>
+
+			<li>Network Architecture: Exploring the role of Software-Defined Networking (SDN) and Network Function Virtualization 
+				(NFV) in supporting the flexible and dynamic allocation of resources for immersive applications. We are interested 
+				in innovations that enhance the scalability, flexibility, and responsiveness of network infrastructures for 
+				immersive technologies.</li>
+
+			<li>Intelligent Network Design: AI and ML have the potential to optimize network performance for immersive applications 
+				by dynamically adapting configurations and efficiently allocating resources. We encourage submissions that explore 
+				how AI/ML can drive intelligent, self-optimizing networks for immersive experiences.</li>
+
+			<li>5G and Beyond: Position papers that examine how 5G, network slicing, and future communication technologies can support 
+				the low-latency, high-reliability needs of immersive computing are welcome. We are particularly interested in 
+				cross-layer optimization and the integration of heterogeneous networks to create seamless connectivity.</li>
+
+			<li>Cloud/Edge Computing: Immersive applications often rely on distributed computing architectures for real-time processing. 
+				We seek research on the integration of edge and cloud computing, dynamic workload distribution, and optimization 
+				techniques for delivering immersive content efficiently.</li>
+
+			<li>Network Measurement: Measuring and optimizing the performance of networks in immersive contexts is increasingly complex. 
+				We invite submissions that introduce novel methodologies, tools, and metrics for assessing latency, bandwidth, 
+				quality of service, and user experience in immersive environments.</li>
+
+			<li>Tools & Testbeds: Immersive computing requires new tools and experimental environments for testing and evaluation. 
+				We are interested in contributions that share experiences in building realistic testbeds, simulations, and 
+				frameworks for reproducible experimentation in XR networks and systems.</li>
+
+			<li>Sustainability & Scalability: As immersive applications grow, ensuring that they are both scalable and sustainable 
+				is vital. We seek ideas that address environmental concerns, resource efficiency, and long-term viability 
+				while maintaining high performance in immersive systems.</li>
+
+			<li>Security, Privacy, and Safety: Immersive technologies introduce new security, privacy, and ethical concerns. We 
+				welcome submissions on innovative solutions to protect user data, ensure safe immersive environments, and address 
+				ethical challenges in XR applications.</li>
+			</ul>
+			
+Submission Guidelines
+Position papers should be 2-4 pages in length, outlining current research, challenges, and potential solutions within the focus areas listed above. We encourage submissions from both academia and industry to contribute diverse perspectives on the future of immersive computing.
+
+Submission Deadline: [Insert Date]
+Workshop Date: [Insert Date]
+Submission Link: [Insert Link]
+
+For any inquiries, please contact: [Workshop Chair's Email]
+
+Join us in shaping the future of networking and systems for immersive technologies!
+			
                 </div>
             </div>
             <hr>
