--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -133,17 +133,14 @@
 				welcome submissions on innovative solutions to protect user data, ensure safe immersive environments, and address 
 				ethical challenges in XR applications.</li>
 			</ul>
-			
-Submission Guidelines
-Position papers should be 2-4 pages in length, outlining current research, challenges, and potential solutions within the focus areas listed above. We encourage submissions from both academia and industry to contribute diverse perspectives on the future of immersive computing.
 
-Submission Deadline: [Insert Date]
-Workshop Date: [Insert Date]
-Submission Link: [Insert Link]
+			<h2> Submission Guidelines </h2>
 
-For any inquiries, please contact: [Workshop Chair's Email]
+			<p>Position papers should be 2 pages in length, outlining current research, challenges, and potential solutions within 
+				the focus areas listed above. We encourage submissions from both academia and industry to contribute diverse 
+				perspectives on the future of immersive computing.</p>
 
-Join us in shaping the future of networking and systems for immersive technologies!
+			<p>Join us in shaping the future of networking and systems for immersive technologies!</p>
 			
                 </div>
             </div>
