--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -140,6 +140,18 @@
 				the focus areas listed above. We encourage submissions from both academia and industry to contribute diverse 
 				perspectives on the future of immersive computing.</p>
 
+			<h2> Submission Website </h2>
+                    	<ul>
+                      	<a href="https://edas.info/newPaper.php?c=33055">EDAS Link for NSF Workshop on Networking and Systems Challenges in Immersive Computing</a></p>
+                    	</ul>
+		    
+			<h2>Important Dates</h2>
+                   	<ul>
+                        <li><strong>Position Paper Submission Deadline:</strong> December 1st, 2024, AoE</li>
+                        <li><strong>Position Paper Notification:</strong> December 10th, 2024, AoE</li>
+                        <li><strong>Workshop:</strong> March 31st - April 1st, 2025</li>
+                    	</ul>
+
 			<p>Join us in shaping the future of networking and systems for immersive technologies!</p>
 			
                 </div>
