--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -100,7 +100,7 @@
 				high bandwidth, and efficient data handling. We seek contributions on novel communication protocols, data 
 				compression techniques, and enhancements to transport layer protocols optimized for immersive environments.</li>
 
-			<li><b>Network Architecture</b>: Exploring the role of Software-Defined Networking (SDN) and Network Function Virtualization 
+			<li><b>Network Architecture</b>: Exploring the role of software-defined networking (SDN) and network function virtualization 
 				(NFV) in supporting the flexible and dynamic allocation of resources for immersive applications. We are interested 
 				in innovations that enhance the scalability, flexibility, and responsiveness of network infrastructures for 
 				immersive technologies.</li>
@@ -115,14 +115,14 @@
 
 			<li><b>Cloud/Edge Computing</b>: Immersive applications often rely on distributed computing architectures for real-time processing. 
 				We seek research on the integration of edge and cloud computing, dynamic workload distribution, and optimization 
-				techniques for delivering immersive content efficiently.</li>
+				techniques for delivering immersive content.</li>
 
 			<li><b>Network Measurement</b>: Measuring and optimizing the performance of networks in immersive contexts is increasingly complex. 
 				We invite submissions that introduce novel methodologies, tools, and metrics for assessing latency, bandwidth, 
 				quality of service, and user experience in immersive environments.</li>
 
 			<li><b>Tools & Testbeds</b>: Immersive computing requires new tools and experimental environments for testing and evaluation. 
-				We are interested in contributions that share experiences in building realistic testbeds, simulations, and 
+				We are interested in contributions that share experiences in building realistic testbeds and 
 				frameworks for reproducible experimentation in XR networks and systems.</li>
 
 			<li><b>Sustainability & Scalability</b>: As immersive applications grow, ensuring that they are both scalable and sustainable 
@@ -142,7 +142,7 @@
 
 			<h2> Submission Website </h2>
                     	<ul>
-                      	<a href="https://edas.info/newPaper.php?c=33055">EDAS Link for NSF Workshop on Networking and Systems Challenges in Immersive Computing</a></p>
+                      	<a href="https://edas.info/newPaper.php?c=33055" target="_blank">EDAS Link for NSF Workshop on Networking and Systems Challenges in Immersive Computing</a></p>
                     	</ul>
 		    
 			<h2>Important Dates</h2>
