--- a/nsf/pages/committees.html
+++ b/nsf/pages/committees.html
@@ -89,6 +89,7 @@
 			<ul>
                     	<li>Songqing Chen, George Mason University</li>
 			<li>Mallesham Dasari, Northeastern University</li>
+			<li>Maria Gorlatova, Duke University</li>
 			<li>Bo Han, George Mason University</li>
 			<li>Robert LiKamWa, Arizona State University</li>
 			</ul>
