--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -138,7 +138,7 @@
 		    
 			<h2>Important Dates</h2>
                    	<ul>
-                        <li><strong>Position Paper Submission Deadline:</strong> December 1st, 2024, AoE</li>
+                        <li><strong>Position Paper Submission Deadline:</strong> December 2nd, 2024, AoE</li>
                         <li><strong>Position Paper Notification:</strong> December 10th, 2024, AoE</li>
                         <li><strong>Workshop:</strong> March 31st - April 1st, 2025</li>
                     	</ul>
