--- a/nsf/index.html
+++ b/nsf/index.html
@@ -113,14 +113,23 @@ of knowledge.</li>
                         <li><strong>Workshop:</strong> March 31st - April 1st, 2025</li>
                     </ul>
 
-			<h2>Sponsor</h2>
-			<ul>
-			This workshop will be sponsored by the National Science Foundation (NSF). 
-			The cognizant NSF Program Directors are Jason O. Hallstrom, Deepankar (Deep) Medhi, and Mimi McClure. 
-			Bo Han from George Mason University is the principal investigator (PI) 
-			of <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2416781&HistoricalAwards=false" target="_blank">this project</a>. 
-			Please send all your inquiries to <a href="mailto:bohan@gmu.edu" style="color: #007bff; text-decoration: none;">bohan@gmu.edu</a>.
-			</ul>
+                    <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                        <div style="max-width: 85%;">
+                            <h2>Sponsor</h2>
+                            <ul>
+                                This workshop will be sponsored by the National Science Foundation (NSF). 
+                                The cognizant NSF Program Directors are Jason O. Hallstrom, Deepankar (Deep) Medhi, and Mimi McClure. 
+                                Bo Han from George Mason University is the principal investigator (PI) 
+                                of <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2416781&HistoricalAwards=false" target="_blank">this project</a>. 
+                                Please send all your inquiries to <a href="mailto:bohan@gmu.edu" style="color: #007bff; text-decoration: none;">bohan@gmu.edu</a>.
+                            </ul>
+                        </div>
+                        <div style="max-width: 10%; margin-left: 20px;">
+                            <img src="images/nsflogo.png" alt="NSF Logo" style="width: 100%; height: auto;">
+                        </div>
+                    </div>
+                    
+                    
 
                 </div>
             </div>
