--- a/nsf/pages/committees.html
+++ b/nsf/pages/committees.html
@@ -89,7 +89,9 @@
                     <h2> Steering Committee </h2>
 			<ul>
                     	<li>Yingying (Jennifer) Chen, Rutgers Universit</li>
-			<li>Klara Nahrstedt, University of Illinois Urbana-Champaign</li>
+			<li>Charlie Hu, Purdue University</li>
+			<li>Klara Nahrstedt, University of Illinois Urbana-Champaign (Chair)</li>
+			<li>Anthony Rowe, Carnegie Mellon University</li>
 			</ul>
 
 			<h2> Local Arrangement Chair </h2>
