--- a/nsf/pages/committees.html
+++ b/nsf/pages/committees.html
@@ -92,6 +92,7 @@
 			<li>Charlie Hu, Purdue University</li>
 			<li>Klara Nahrstedt, University of Illinois Urbana-Champaign (Chair)</li>
 			<li>Anthony Rowe, Carnegie Mellon University</li>
+			<li>Amitabh Varshney, University of Maryland</li>
 			</ul>
 
 			<h2> Local Arrangement Chair </h2>
