--- a/nsf/index.html
+++ b/nsf/index.html
@@ -58,6 +58,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./pages/accommodation.html">Accommodation</a>
                 </li>
+		<li class="nav-item">
+                    <a class="nav-link" href="./pages/childcare.html">Childcare</a>
+                </li>
     
             </ul>
         </div>
