--- a/nsf/pages/in-person.html
+++ b/nsf/pages/in-person.html
@@ -60,6 +60,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="accommodation.html">Accommodation</a>
                 </li>
+		<li class="nav-item">
+                    <a class="nav-link" href="childcare.html">Childcare</a>
+                </li>
     
             </ul>
         </div>
