--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -83,8 +83,10 @@
                 <div class="col-md-12">
                     <h2> Call for Position Papers </h2>
                     
-                    <p>We seek to foster cross-disciplinary dialogue and drive innovation in building the next generation of 
-			network infrastructures and systems that can meet the demands of immersive applications.
+                    <p>We seek to foster cross-disciplinary dialogue and drive innovation in building the next generation of network infrastructures 
+			    and systems that can meet the demands of immersive applications. Submitted position papers will be used to select 
+			    participants who will receive invitations to register and be eligible for travel reimbursement. Please note that the 
+			    selected position papers will not be published or formally presented at the workshop.
 			</p>
 
 
