--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -84,8 +84,9 @@
                     <h2> Call for Position Papers </h2>
                     
                     <p>We seek to foster cross-disciplinary dialogue and drive innovation in building the next generation of network infrastructures 
-			    and systems that can meet the demands of immersive applications. Submitted position papers will be used to select 
-			    participants who will receive invitations to register and be eligible for travel reimbursement. Please note that the 
+			    and systems that can meet the demands of immersive applications. Submitted position papers will be used solely for the 
+			    purpose of choosing participants who can meaningfully contribute to the workshop's discussions and objectives. Selected 
+			    participants will receive invitations to register and be eligible for travel reimbursement. Please note that the 
 			    selected position papers will not be published or formally presented at the workshop.
 			</p>
 
@@ -135,7 +136,46 @@
 
 			<p>Position papers should be 2 pages in length, outlining current research, challenges, and potential solutions within 
 				the focus areas listed above. We encourage submissions from both academia and industry to contribute diverse 
-				perspectives on the future of immersive computing.</p>
+				perspectives on the future of immersive computing. Position papers should focus on how the authors’ expertise, 
+				prior work, and vision align with the workshop’s mission. The primary goal is to select participants who can 
+				contribute to the workshop discussions, foster collaboration, and help shape future research directions. While 
+				the submission will not be evaluated on the basis of novel research contributions, it should demonstrate the 
+				potential to advance the workshop’s mission and goals.</p>
+
+			<p>Position papers should include the following:</p>
+
+			<ol>
+			<li>Title and Author Information</li>
+
+Title of the position paper.
+Full name, affiliation, and contact information of the author(s).
+
+			<li>Area(s) of Interest</li>
+
+Specify which focus areas from the workshop’s call for position papers your submission aligns with (e.g., network protocols, distributed systems, cloud/edge computing, security and privacy, etc.).
+If applicable, highlight any additional related areas that the authors believe are relevant to immersive computing challenges.
+
+			<li>Prior Work and Expertise</li>
+
+Briefly describe the author(s)’ relevant experience and prior work in the areas covered by the workshop. This could include prior research, developed systems, methodologies, or contributions to related fields.
+Mention any datasets, tools, frameworks, or testbeds the author(s) have worked on or developed that could be useful to the workshop’s discussions.
+
+			<li>Potential Contributions to the Workshop</li>
+
+Outline what you or your team can bring to the workshop discussions, particularly in relation to immersive computing’s networking and systems challenges.
+Describe any unique insights, experiences, or resources (e.g., methodologies, datasets, platforms) that you believe will contribute to advancing the workshop's goals.
+
+			<li>Vision for the Future</li>
+
+Discuss the challenges you see in networking and systems for immersive computing.
+Share any ideas or recommendations you have for future research directions or collaborative efforts in this field.
+
+			<li>Expected Outcomes</li>
+
+What do you hope to gain from participating in the workshop?
+How do you envision your contributions impacting the broader community of researchers and practitioners focused on immersive computing?
+				</ol>
+		
 
 			<h2> Submission Website </h2>
                     	<ul>
