--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -146,9 +146,11 @@
 
 			<ol>
 			<li>Title and Author Information</li>
+				<ul>
+				<li>Title of the position paper.</li>
 
-Title of the position paper.
-Full name, affiliation, and contact information of the author(s).
+				<li>Full name, affiliation, and contact information of the author(s).</li>
+				</ul>
 
 			<li>Area(s) of Interest</li>
 
